    - force update of parallel cell manager along with update status.
    - time step component does not compute sigms for dummy particles.
Monday 21 December 2009 (10:55:03 PM)
    - processor map uses cells directly from the root_cells children rather
      than the hierarchy_list - this hierarchy list only gets updated after the
      root cells update call, within which the load balance could be called
      multiple times.
    - function to construct face neighbors.
    - load balancer class added.
    - function to update neighbor information after some local changes added.
    - dimension attribute added to ParallelCellManager to test for boundary
      cells properly.
Thursday 24 December 2009 (06:04:12 PM)
    - superficial changes - nothing major.
Wednesday 30 December 2009 (03:48:54 PM)
    - parallel component to add particle property requirements for parallel
    simulations.
    - parallel vtk writer component to write VTK files in a parallel
    simulation.
Friday 08 January 2010 (01:10:01 AM)
    - code for measuring performance gain from parallel simulations. 
Friday 08 January 2010 (10:02:22 AM)
    - code for timing serial code (to compare results with serial case.)
Wednesday 13 January 2010 (10:36:19 PM)
    - added command line arguments to the timing code.
Thursday 14 January 2010 (1:15:30 PM)
    - load balance checks if particles change during a load balance iteration.
      if not - load balancing iterations are stopped.
    - dummy solver added to serial_code_timing.py in the repo.
Tuesday 19 January 2010 (11:59:22 PM)
    - load balance component added.
    - some timing measurement code for report.
Monday 01 February 2010 (01:07:30 PM)
    - Use of Python c-api functions in many low-level modules.
    - cythonizing of parallel cell module.
    - removed debug calls in parallel cell modules (both cython and python).
    - Added code to perform load balancing initially in the parallel timing modules.
    - Cythonized parallel controller.